# IsoMateric

./: CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  cmake_install.cmake  compile_and_run.sh  imgui.ini
IsoMateric/assets/shaders/: flat_color.fs  light.fs
IsoMateric/src/: application.cpp  camera.cpp  camera.h  gameObject.cpp  gameObject.h  isomateric.cpp  isomateric.h  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  texture.cpp  texture.h
